--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ function updateCarList(transaction, results) {
     for (i = 0; i < results.rows.length; i++) {
         //Get the current row
         var row = results.rows.item(i);
-        if (row.make == "jo"){
+        if (row.make = "jo"){
 		    listholder.innerHTML += "hello you are here";}
         //listholder.innerHTML += "<li>" + row.make + " - " + row.model + " (<a href='javascript:void(0);' onclick='deleteCar(" + row.id + ");'>Delete Car</a>)";
     }
